<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/newpayment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentDark">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:elevation="4dp"
        android:visibility="gone"
        app:navigationContentDescription="@string/go_back_to_all_tasks"
        app:navigationIcon="@drawable/ic_clear"
        app:title="@string/new_payment_title">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_selection_mode"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccent"
        app:elevation="4dp"
        app:navigationContentDescription="@string/cancel_selection"
        app:navigationIcon="@drawable/ic_clear"
        app:title="@string/select_completions">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/register_payment_completions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottom_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_selection_mode" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/newpayment_layout_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:theme="@style/CustomEditTextTheme"
            android:layout_marginEnd="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/newpayment_button_register">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/newpayment_edit_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/new_payment_date"
                android:textSize="24sp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <!-- <ImageButton

            android:paddingStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_payment_icon"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            /> -->

        <Button
            android:id="@+id/newpayment_button_register"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="11dp"
            android:background="@drawable/accent_dark_rounded_2dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textSize="14sp"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>