<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/completions_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        app:title="@string/menu_icon_title_completions"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:navigationContentDescription="@string/go_back_to_all_tasks"
        app:navigationIcon="@drawable/ic_back">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_selection_mode"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAccentDark"
        android:elevation="4dp"
        android:visibility="gone"
        app:navigationContentDescription="@string/cancel_selection"
        app:navigationIcon="@drawable/ic_clear">

    </android.support.v7.widget.Toolbar>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/completions_recycler"
        android:scrollbars="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/completions_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>