<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edittask_layout_name"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:theme="@style/CustomEditTextTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/new_task_name"
            android:id="@+id/edittask_edit_name"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="30sp"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edittask_layout_fee"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:theme="@style/CustomEditTextTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittask_layout_name">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/new_task_fee"
            android:id="@+id/edittask_edit_fee"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/edittask_title_completions"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:text="@string/new_task_completions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittask_layout_fee" />

    <Button
        android:background="@drawable/dark_rounded_2dp"
        android:id="@+id/button_manage_completions"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/manage_completions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittask_title_completions" />

    <TextView
        android:id="@+id/edittask_title_color"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:text="@string/new_task_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_manage_completions" />

    <android.support.constraint.ConstraintLayout
        android:background="@drawable/white_rounded_2dp"
        android:id="@+id/edittask_color_button"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittask_title_color">

        <LinearLayout
            android:background="@drawable/circle"
            android:id="@+id/edittask_color_button_marker"
            android:layout_height="22dp"
            android:layout_marginStart="5dp"
            android:layout_width="22dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edittask_color_button_title"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/edittask_color_button_marker"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:background="@drawable/dark_rounded_2dp"
        android:id="@+id/delete_task"
        android:layout_height="36dp"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/delete_task"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittask_color_button" />

</android.support.constraint.ConstraintLayout>