<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/completion_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/completion_date"
        android:text="@string/item_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <EditText
        android:id="@+id/completion_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completion_date_title" />

    <TextView
        android:id="@+id/completion_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:labelFor="@id/completion_time"
        android:text="@string/item_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completion_date" />

    <EditText
        android:id="@+id/completion_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completion_time_title" />

    <Button
        android:id="@+id/button_delete_completion"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/white_rounded_2dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/delete_completion"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completion_time" />

</android.support.constraint.ConstraintLayout>